@@ -9,6 +9,7 @@
         <java.version>21</java.version>
         <javafx.version>21.0.7</javafx.version>
         <junit.version>5.10.2</junit.version>
+        <slf4j.version>1.7.36</slf4j.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <toolchain.jdk.version>[21,22)</toolchain.jdk.version>
     </properties>
@@ -32,6 +33,21 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.46.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -77,7 +93,9 @@
                     <forkCount>0</forkCount>
                     <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                     <argLine>
+                        --add-opens com.example/com.example.config=ALL-UNNAMED
                         --add-opens com.example/com.example.controller=ALL-UNNAMED
+                        --add-opens com.example/com.example.data=ALL-UNNAMED
                         --add-opens com.example/com.example.model=ALL-UNNAMED
                         --add-opens com.example/com.example.view=ALL-UNNAMED
                     </argLine>
